Add videos section, add Map #17.

--- a/index.html
+++ b/index.html
@@ -540,6 +540,63 @@
 				<a href="https://www.strawpoll.me/17162625" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
 			</div>
 		</div>
+
+		<button class="collapsible">
+			<span class="item-title">Reality Break</span>
+			<div class="item-description">
+				<span class="tooltip description-tag star-tag"> <span class="icon-star"></span> </span>
+				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
+				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
+				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
+			</div>
+		</button>
+		<div class="collapsible-content">
+			<a href="https://i.imgur.com/Jq8MBtj.jpg" target="_blank"><img class="content-img" data-src="/img/maps/reality.png"></a>
+			<noscript><a href="https://i.imgur.com/Jq8MBtj.jpg" target="_blank"><img class="content-img" src="https://i.imgur.com/Jq8MBtj.jpg"></a></noscript>
+			<div class="content-info">
+				<p>
+					The Orbs fell from the sky, and the world fell apart. The hourglass ticks away to the next experiment; reality unthreaded and rewoven, patterns replicated and mutated, until the mosaic of the world is complete.
+				</p>
+
+				<a href="https://www.mediafire.com/file/ezfvgxyf3z7ngie/%5B17%5D_Reality_Break.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
+				<a href="https://www.strawpoll.me/17291685" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
+			</div>
+		</div>
+	</section>
+
+
+	<section id="videos-section">
+		<h2>Playthroughs</h2>
+
+		<a href="https://www.youtube.com/watch?v=3R2FjWToL1U&list=PLmaTM0F-WKEeHM8q1XjnEo2WELIiJpe-c" target="_blank">
+			<div class="video-box">
+				<img class="video-platform-icon" src="/img/youtube.png" alt="YouTube"> <span class="video-box-title">TJtheObscure</span>
+				<img class="video-thumbnail" src="https://img.youtube.com/vi/3R2FjWToL1U/mqdefault.jpg" alt="Video thumbnail">
+			</div>
+		</a>
+
+		<a href="https://www.youtube.com/watch?v=8EwbKvfeuBo&list=PLS2R_wlBVhhb2uBc2a_CFX7KYKGm2GfOo" target="_blank">
+			<div class="video-box">
+				<img class="video-platform-icon" src="/img/youtube.png" alt="YouTube"> <span class="video-box-title">BSM</span>
+				<img class="video-thumbnail" src="https://img.youtube.com/vi/8EwbKvfeuBo/mqdefault.jpg" alt="Video thumbnail">
+			</div>
+		</a>
+
+		<a href="https://www.youtube.com/watch?v=P5I-82-sYP4" target="_blank">
+			<div class="video-box">
+				<img class="video-platform-icon" src="/img/youtube.png" alt="YouTube"> <span class="video-box-title">Ty_Plays_Games</span>
+				<img class="video-thumbnail" src="https://img.youtube.com/vi/P5I-82-sYP4/mqdefault.jpg" alt="Video thumbnail">
+			</div>
+		</a>
+	</section>
+
+
+	<section id="leaderboard-section">
+		<h2>Speedrun Leaderboard</h2>
+
+		<div style="text-align: center; font-style: italic;">Under construction...</div>
 	</section>
 
 	<footer>
