Updated Map #17 to v1.1

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
+				<span class="tooltip description-tag map-version-tag"> v1.1 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> v1.1 <ul><li>Fixed function initialization</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -560,7 +560,7 @@
 					The Orbs fell from the sky, and the world fell apart. The hourglass ticks away to the next experiment; reality unthreaded and rewoven, patterns replicated and mutated, until the mosaic of the world is complete.
 				</p>
 
-				<a href="https://www.mediafire.com/file/ezfvgxyf3z7ngie/%5B17%5D_Reality_Break.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
+				<a href="https://www.mediafire.com/file/gpero92rlr1u4o8/%5B17%5D_Reality_Break_1.1.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
 				<a href="https://www.strawpoll.me/17291685" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
 			</div>
 		</div>
