--- a/index.html
+++ b/index.html
@@ -564,6 +564,29 @@
 				<a href="https://www.strawpoll.me/17291685" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
 			</div>
 		</div>
+
+		<button class="collapsible">
+			<span class="item-title">Searing Vertigo</span>
+			<div class="item-description">
+				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
+				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
+				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
+			</div>
+		</button>
+		<div class="collapsible-content">
+			<a href="https://i.imgur.com/zyG0CtD.png" target="_blank"><img class="content-img" data-src="/img/maps/searing.png"></a>
+			<noscript><a href="https://i.imgur.com/zyG0CtD.png" target="_blank"><img class="content-img" src="https://i.imgur.com/zyG0CtD.png"></a></noscript>
+			<div class="content-info">
+				<p>
+					Flame and ash are all that the creatures of this scorched land know. Wield your powerful magic against the last survivors of this incinerated world, and ascend their desolate oasis perched over the flames.
+				</p>
+
+				<a href="https://www.mediafire.com/file/efz5deeeex7a6i5/%5B18%5D_Searing_Vertigo.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
+				<a href="https://www.strawpoll.me/17357424" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
+			</div>
+		</div>
 	</section>
 
 
