Add Map #19, updat map #17 to v1.2, fix changelog ordering.

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
 				<span class="tooltip description-tag length-tag-long"> <span class="icon-clock"></span> Long </span>
 				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
-				<span class="tooltip description-tag map-version-tag"> v1.1 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> v1.1 <ul><li>Fixed function initialization</li></ul> </span></span>
+				<span class="tooltip description-tag map-version-tag"> v1.2 <span class="tooltip-text changelog"> v1.2 <ul><li>Fixed countdown timer visualization</li><li>Decreased decay rate by half</li></ul> v1.1 <ul><li>Fixed function initialization</li></ul> v1.0 <ul><li>Original release</li></ul> </span></span>
 				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
 			</div>
 		</button>
@@ -560,7 +560,7 @@
 					The Orbs fell from the sky, and the world fell apart. The hourglass ticks away to the next experiment; reality unthreaded and rewoven, patterns replicated and mutated, until the mosaic of the world is complete.
 				</p>
 
-				<a href="https://www.mediafire.com/file/gpero92rlr1u4o8/%5B17%5D_Reality_Break_1.1.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
+				<a href="https://www.mediafire.com/file/neruiyk42voi5b8/%5B17%5D_Reality_Break_1.2.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
 				<a href="https://www.strawpoll.me/17291685" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
 			</div>
 		</div>
@@ -585,6 +585,29 @@
 
 				<a href="https://www.mediafire.com/file/efz5deeeex7a6i5/%5B18%5D_Searing_Vertigo.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
 				<a href="https://www.strawpoll.me/17357424" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
+			</div>
+		</div>
+
+		<button class="collapsible">
+			<span class="item-title">Volatile Footing</span>
+			<div class="item-description">
+				<span class="tooltip description-tag difficulty-tag-hard"> <span class="icon-skull"></span> Hard </span>
+				<span class="tooltip description-tag length-tag-short"> <span class="icon-clock"></span> Short </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
+				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
+			</div>
+		</button>
+		<div class="collapsible-content">
+			<a href="https://i.imgur.com/dfWWOVY.jpg" target="_blank"><img class="content-img" data-src="/img/maps/volatile.png"></a>
+			<noscript><a href="https://i.imgur.com/dfWWOVY.jpg" target="_blank"><img class="content-img" src="https://i.imgur.com/dfWWOVY.jpg"></a></noscript>
+			<div class="content-info">
+				<p>
+					Flame and ash are all that the creatures of this scorched land know. Wield your powerful magic against the last survivors of this incinerated world, and ascend their desolate oasis perched over the flames.
+				</p>
+
+				<a href="https://www.mediafire.com/file/5hfu333ky0m9h5r/%5B19%5D_Volatile_Footing.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
+				<a href="https://www.strawpoll.me/17408996" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
 			</div>
 		</div>
 	</section>
