--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 			<noscript><a href="https://i.imgur.com/dfWWOVY.jpg" target="_blank"><img class="content-img" src="https://i.imgur.com/dfWWOVY.jpg"></a></noscript>
 			<div class="content-info">
 				<p>
-					Flame and ash are all that the creatures of this scorched land know. Wield your powerful magic against the last survivors of this incinerated world, and ascend their desolate oasis perched over the flames.
+					Colors and challengers clash in this cathedral coliseum. The right block at the wrong place makes all the difference, so build your steps carefully!
 				</p>
 
 				<a href="https://www.mediafire.com/file/5hfu333ky0m9h5r/%5B19%5D_Volatile_Footing.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
