--- a/index.html
+++ b/index.html
@@ -610,6 +610,30 @@
 				<a href="https://www.strawpoll.me/17408996" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
 			</div>
 		</div>
+
+		<button class="collapsible">
+			<span class="item-title">The Melted Desert</span>
+			<div class="item-description">
+				<span class="tooltip description-tag star-tag"> <span class="icon-star"></span> </span>
+				<span class="tooltip description-tag difficulty-tag-medium"> <span class="icon-skull"></span> Medium </span>
+				<span class="tooltip description-tag length-tag-medium"> <span class="icon-clock"></span> Medium </span>
+				<span class="tooltip description-tag mc-version-tag"> 1.13+ </span>
+				<span class="tooltip description-tag map-version-tag"> v1.0 <span class="tooltip-text changelog"> v1.0 <ul><li>Original release</li></ul> </span></span>
+				<!-- <span class="tooltip description-tag spoiler-tag"> # <span class="tooltip-text">Elytra and Explosive Arrows</span> </span> -->
+			</div>
+		</button>
+		<div class="collapsible-content">
+			<a href="https://i.imgur.com/DMluSUV.jpg" target="_blank"><img class="content-img" data-src="/img/maps/melted.png"></a>
+			<noscript><a href="https://i.imgur.com/DMluSUV.jpg" target="_blank"><img class="content-img" src="https://i.imgur.com/DMluSUV.jpg"></a></noscript>
+			<div class="content-info">
+				<p>
+					These plains are all that remains of a once vast mountain range, melted away by the creeping ghost trees. Only the tallest peaks remain, grasping at the skies as they become undone.
+				</p>
+
+				<a href="https://www.mediafire.com/file/au86wz1vbsf8ut9/%5B20%5D_The_Melted_Desert.zip/file" target="_blank"><button class="flat-button button-primary">Download</button></a>
+				<a href="https://www.strawpoll.me/17415117" target="_blank"><button class="flat-button button-secondary">Feedback</button></a>
+			</div>
+		</div>
 	</section>
 
 
